tools/crates/vendor/toml_edit/tests/fixtures/invalid/control/bare-cr.stderr
TOML parse error at line 2, column 1
  |
2 | 
  | ^

